// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component tests Radio default 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Select",
      },
    ]
  }
  accessibilityLabel="Default Radio"
  accessibilityPositionInSet={0}
  accessibilityRole="radio"
  accessibilitySetSize={0}
  accessibilityState={
    Object {
      "disabled": false,
      "selected": false,
    }
  }
  accessible={true}
  focusable={true}
  keyDownEvents={
    Array [
      Object {
        "key": "ArrowDown",
      },
      Object {
        "key": "ArrowRight",
      },
      Object {
        "key": "ArrowUp",
      },
      Object {
        "key": "ArrowLeft",
      },
    ]
  }
  labelPosition="after"
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "paddingHorizontal": 4,
      "paddingVertical": undefined,
    }
  }
  value="key1"
>
  <View
    accessible={false}
    focusable={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#616161",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 16,
        "justifyContent": "center",
        "marginBottom": 6,
        "marginLeft": 4,
        "marginRight": 4,
        "marginTop": 6,
        "width": 16,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": undefined,
          "borderRadius": 4,
          "height": 8,
          "opacity": 0,
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "borderColor": "transparent",
        "borderRadius": 4,
        "borderStyle": "solid",
        "borderWidth": 2,
        "flexDirection": "column",
        "marginLeft": 0,
        "marginRight": 0,
        "padding": undefined,
        "paddingRight": 0,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      onAccessibilityTap={[Function]}
      style={
        Object {
          "color": "#242424",
          "fontFamily": "Segoe UI",
          "fontSize": 16,
          "fontWeight": "400",
          "margin": 0,
          "marginHorizontal": 2,
          "marginVertical": 2,
        }
      }
    >
      Default Radio
    </Text>
  </View>
</View>
`;

exports[`Radio component tests Radio disabled 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Select",
      },
    ]
  }
  accessibilityLabel="Disabled Radio"
  accessibilityPositionInSet={0}
  accessibilityRole="radio"
  accessibilitySetSize={0}
  accessibilityState={
    Object {
      "disabled": true,
      "selected": false,
    }
  }
  accessible={true}
  focusable={false}
  keyDownEvents={
    Array [
      Object {
        "key": "ArrowDown",
      },
      Object {
        "key": "ArrowRight",
      },
      Object {
        "key": "ArrowUp",
      },
      Object {
        "key": "ArrowLeft",
      },
    ]
  }
  labelPosition="after"
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "paddingHorizontal": 4,
      "paddingVertical": undefined,
    }
  }
  value="key1"
>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={false}
    focusable={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#f0f0f0",
        "borderColor": "#e0e0e0",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 16,
        "justifyContent": "center",
        "marginBottom": 6,
        "marginLeft": 4,
        "marginRight": 4,
        "marginTop": 6,
        "width": 16,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": undefined,
          "borderRadius": 4,
          "height": 8,
          "opacity": 0,
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "borderColor": "transparent",
        "borderRadius": 4,
        "borderStyle": "solid",
        "borderWidth": 2,
        "flexDirection": "column",
        "marginLeft": 0,
        "marginRight": 0,
        "padding": undefined,
        "paddingRight": 0,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      onAccessibilityTap={[Function]}
      style={
        Object {
          "color": "#bdbdbd",
          "fontFamily": "Segoe UI",
          "fontSize": 16,
          "fontWeight": "400",
          "margin": 0,
          "marginHorizontal": 2,
          "marginVertical": 2,
        }
      }
    >
      Disabled Radio
    </Text>
  </View>
</View>
`;
